--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -47,7 +47,7 @@
 .cardImg img {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
   object-position: center;
 }
 .cardText {
