--- a/src/pages/contact/contact.css
+++ b/src/pages/contact/contact.css
@@ -69,7 +69,7 @@
   width: 70%;
   font-size: 1.4rem;
   color: #2b2b2c;
-  margin-bottom: 3rem;
+  margin-bottom: 1rem;
   text-align: left;
 }
 .addressItem {
@@ -188,7 +188,10 @@ textarea {
     margin-bottom: 3rem;
   }
 }
-@media only screen and (max-width: 530px) {
+@media only screen and (max-width: 400px) {
+  .contact {
+    height: auto;
+  }
   .contactWrapper {
     flex-direction: column;
     row-gap: 2rem;
