--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -88,6 +88,16 @@
     height: 100%;
     border-radius: 0rem;
   }
+  .cardImg {
+    width: 60%;
+    height: 60%;
+  }
+  .cardImg img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+  }
   .cardTitle {
     font-size: 2.2rem;
     margin: 2rem auto;
